[gd_scene load_steps=2 format=3 uid="uid://com1u85x7sy52"]

[ext_resource type="Script" path="res://scripts/weapon.gd" id="1_3yq32"]

[node name="PrimaryWeapon" type="Node2D"]
position = Vector2(-148, 98)
script = ExtResource("1_3yq32")

[node name="PrimaryCooldown" type="Timer" parent="."]
one_shot = true

[node name="SpriteTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PrimaryCooldown" to="." method="_on_primary_cooldown_timeout"]
[connection signal="timeout" from="SpriteTimer" to="." method="_on_sprite_timer_timeout"]
